# OpenSolids

./: .gitignore  README.md  README.pypi.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: contributing_data.md  releasing.md  usage-guide.md
docs/assets/: README.md
docs/assets/data/: al6061_mil_sigma_y.csv  al6061_nist_k.csv  diffusivity_comparison_selected.csv  focus_materials_coverage.csv  (+8 more)
docs/compliance/: mil_hdbk_5.md  nasa_ntrs.md  nist.md
docs/materials/: README.md
docs/prd/: README.md
examples/: 01_quickstart.py  02_units_and_policies.py  03_search_and_provenance.py  04_regen_trade_study.py  05_plot_property_curves.py  06_plot_policy_behavior.py  07_generate_all_visuals.py  08_database_workflows.py  09_plot_focus_materials.py  09_plot_provider_coverage.py  10_plot_multidatabase_6061.py  11_verify_units_and_sanity.py  12_export_material_catalog.py  13_audit_focus_material_sources.py  README.md  _plot_style.py
materials/: README.md  canonical_materials.csv  material_catalog.csv  material_sources.md
src/opensolids/: __init__.py  api.py  canonical_catalog.py  curve.py  material.py  policies.py  registry.py  search.py  types.py  units.py  validation.py
tests/fixtures/: nist_304_live.html  nist_6061_fixture.html  nist_6061_live.html  nist_index_live.html
tests/providers/: test_mil_import_parser.py  test_nist_parser.py  test_ntrs_client.py  test_ntrs_compliance.py  test_registry_search.py
tests/unit/: test_canonical_registry.py  test_curve_models.py  test_data_quality.py  test_material_api.py  test_search_filters.py  test_validation.py
(+25 files in other folders)
